--- a/themes/hexo-theme-next-master/source/css/_custom/style.styl
+++ b/themes/hexo-theme-next-master/source/css/_custom/style.styl
@@ -1,5 +1,5 @@
 body { 
-background: url(/images/图片名);
+background: url(/images/preview.jpg);
 background-repeat: no-repeat;// 设定背景图片非重复填充
 background-attachment: fixed;// 设置背景图片不随页面滚动
 background-position: 50% 50%;// 设置背景图片位置
