--- a/themes/hexo-theme-next-master/source/css/main.styl
+++ b/themes/hexo-theme-next-master/source/css/main.styl
@@ -45,4 +45,4 @@ for $inject_mixin in hexo-config('injects.mixin')
 // --------------------------------------------------
 for $inject_style in hexo-config('injects.style')
   @import $inject_style;
-  @import "_custom/styles.styl"
+  @import "_custom/style.styl"
