--- a/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
@@ -34,3 +34,10 @@
     opacity: $b2t-opacity-hover;
   }
 }
+body {
+  background-image:url(/images/preview.jpg);
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position:50% 50%;
+  background-size: 100% 100%;
+}
