--- a/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
@@ -41,3 +41,10 @@ body {
   background-position:50% 50%;
   background-size: 100% 100%;
 }
+.main-inner{
+	opacity: 0.8;
+}
+.header-inner{
+	opacity: 0.8;
+	z-index: 10;
+}
