--- a/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
@@ -48,3 +48,7 @@ body {
 	opacity: 0.8;
 	z-index: 10;
 }
+//首页banner渐变色
+.site-brand-container {
+    background: linear-gradient(200deg, #2e80a5, #0c0c0b);
+}
