--- a/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/components/back-to-top.styl
@@ -40,16 +40,22 @@ body {
   background-attachment:fixed;
   background-position:50% 50%;
   background-size: 100% 100%;
+  background-size: cover;//图片展示大小
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+   opacity: 0.8;
 }
 .main-inner{
-	opacity: 0.8;
+	opacity: 1;
 }
 .header-inner{
-	opacity: 0.8;
+	opacity: 1;
 	z-index: 10;
 }
 //首页banner渐变色
-.site-brand-container {
+.site-meta {
     background: linear-gradient(200deg, #2e80a5, #0c0c0b);
 }
-.container{margin-top:10px;}
+.container{margin-top:3px;}
